<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="resource_comment_edit_title">Comment about %1$s</string>
    <string name="account_info">My account</string>
    <string name="account_name_not_login">Sign in</string>
    <string name="account_unactivated">Account not activated</string>
    <string name="ad_app_download_start">Starting download…</string>
    <string name="ad_app_is_downloading">Downloading…</string>
    <string name="add_resource_detail_fail">"Can't add resource"</string>
    <string name="all_resources">All</string>
    <string name="app_name">Themes</string>
    <string name="apply_default_font_tip">"Keep using system's current font?"</string>
    <string name="apply_font_btn_exclude">Not now</string>
    <string name="apply_font_btn_reboot">Reboot</string>
    <string name="apply_font_tip">"Reboot to apply this theme's font."</string>
    <string name="apply_theme_with_ringtones">Use theme ringtones</string>
    <string name="audio_duration_minutes_format">%1$d minutes</string>
    <string name="audio_duration_seconds_format">%1$d seconds</string>
    <string name="backup_theme_dialog_message">Back up your current theme?</string>
    <string name="backup_theme_dialog_ok">Back up</string>
    <string name="backup_theme_fail_trial_rights_message">"Can't back up trial items"</string>
    <string name="backup_theme_name">Theme backup</string>
    <string name="backup_theme_progress_message">Backing up…</string>
    <string name="backup_theme_success_message">Your current theme settings have been backed up.</string>
    <string name="both_all_apply_failured">"Can't apply wallpaper"</string>
    <string name="both_all_apply_success">Wallpaper applied</string>
    <string name="browser_local_resource">Local resources</string>
    <string name="can_not_apply">Can not apply</string>
    <string name="card_data_request_error">An error occurred. Wait a minute or two and try again.</string>
    <string name="card_loading">Just a sec…</string>
    <string name="card_no_network">"Couldn't connect to the network. Check your network settings and try again."</string>
    <string name="card_retry">Try again</string>
    <string name="change_wallpaper">Wallpaper</string>
    <string name="classification_more_understand_you">Select your favorite category</string>
    <string name="close">Close</string>
    <string name="component_backup_preference_title">Back up theme</string>
    <string name="component_category_finest_title">GENERAL</string>
    <string name="component_category_more_title">ADVANCED</string>
    <string name="component_title_ringtone">Ringtones</string>
    <string name="component_title_wallpaper">Wallpapers</string>
    <string name="current_using_desktop_wallpaper_text">Home screen</string>
    <string name="current_using_lockscreen_wallpaper_text">Lock screen</string>
    <string name="current_version_incompatible">Not compatible</string>
    <string name="deleting">Deleting…</string>
    <string name="description_author">Author</string>
    <string name="description_designer">Designer</string>
    <string name="description_download">Downloaded</string>
    <string name="description_size">Size</string>
    <string name="description_summary">Summary</string>
    <string name="description_uploadtime">Update</string>
    <string name="description_version">Version</string>
    <string name="description_version_szie">Version: %1$s Size: %2$s</string>
    <string name="desktop_wallpaper">Home screen</string>
    <string name="dev_options">Developer options</string>
    <string name="dev_options_summary">Web resources</string>
    <string name="download_failed">"Couldn't download"</string>
    <string name="download_preview_failed">"Can't load preview"</string>
    <string name="download_success">Download finished</string>
    <string name="fail_to_add_account">"Can't add account"</string>
    <string name="favorite_list">Favorites</string>
    <string name="favorite_list_format">Favorite %1$s</string>
    <string name="find_more_theme">Find more</string>
    <string name="find_more_wallpapers">Find more</string>
    <string name="gift_anonymous">Anonymous</string>
    <string name="gift_operation_fail_dlg_abandon">Cancel</string>
    <string name="gift_operation_fail_dlg_retry">Try again</string>
    <string name="gift_operation_waiting">Just a sec…</string>
    <string name="gift_owned">Purchased</string>
    <string name="gift_present">Give</string>
    <string name="gift_present_dlg_anonymous">Anonymous gift</string>
    <string name="gift_present_dlg_input_hint">Mi Account ID/Phone</string>
    <string name="gift_present_dlg_no_fee">"You won't be charged by your carrier for sending gifts"</string>
    <string name="gift_present_dlg_present_max_limit">"Theme can't be gifted more than %1$s times."</string>
    <string name="gift_present_dlg_share">Create code and share gift</string>
    <string name="gift_present_fail_dlg_content">"Couldn't send this gift. "</string>
    <string name="gift_present_fail_dlg_title">"Couldn't send gift"</string>
    <string name="gift_present_success_dlg_content">An SMS message will be sent to this person when the theme is delivered.</string>
    <string name="gift_present_success_dlg_title">Gift sent</string>
    <string name="gift_present_success_no_sms_dlg_content">Gift history is listed in your Account page.</string>
    <string name="gift_presented">Sent</string>
    <string name="gift_purchase_success_dlg_content">You purchased %1$s as a gift. To send it, go to your Themes Account page.</string>
    <string name="gift_purchase_success_dlg_title">Gift purchased</string>
    <string name="gift_purchased_endnote">To: %1$s</string>
    <string name="gift_purchased_list_empty">"You haven't given any gifts."</string>
    <string name="gift_purchased_list_empty_with_received_list_empty">No gifts.</string>
    <string name="gift_received_endnote">From: %1$s (received %2$s)</string>
    <string name="gift_received_list_empty">"You haven't received any gifts."</string>
    <string name="gift_received_notification_title">%s gave you a theme.</string>
    <string name="gift_share">Share</string>
    <string name="gift_transfer">Transfer</string>
    <string name="gift_unbind_fail_dlg_title">"Can't create code"</string>
    <string name="gift_use">Give</string>
    <string name="gift_use_confirmation_dlg_title">Send this gift?</string>
    <string name="gift_use_fail_dlg_title">Something went wrong</string>
    <string name="gift_used">Sent</string>
    <string name="hide_free">Hide free %1$s</string>
    <string name="hide_incompatible">Hide incompatible %1$s</string>
    <string name="home_apply_failured">"Can't apply Home screen wallpaper"</string>
    <string name="home_apply_success">Home screen wallpaper applied</string>
    <string name="in_the_end">No more items to show</string>
    <string name="incompatible_dialog_message">This theme isnt fully compatible with MIUI 9. Some elements may be displayed incorrectly.</string>
    <string name="incompatible_dialog_ok">Got it</string>
    <string name="incompatible_dialog_title">Compatibility issues</string>
    <string name="is_setting_wallpaper_message">Setting wallpaper…</string>
    <string name="item_resource_audio_optional_alarm_ring">Alarms</string>
    <string name="item_resource_audio_optional_color_ring">Ringback tone</string>
    <string name="item_resource_audio_optional_notification_ring">Notifications</string>
    <string name="item_resource_audio_optional_phone_ring">Ringtone</string>
    <string name="live_wallpaper">Live wallpaper</string>
    <string name="loading">Just a sec…</string>
    <string name="loading_resource_detail_fail">"Can't load resource"</string>
    <string name="loading_resource_detail_info">Just a sec…</string>
    <string name="local_photos">Local photos</string>
    <string name="local_resouce_creator_name">Developer: %1$s</string>
    <string name="lockscreen_apply_failured">"Can't apply Lock screen wallpaper"</string>
    <string name="lockscreen_apply_failured_but_home_apply_success">"Home screen wallpaper applied. Can't apply Lock screen wallpaper."</string>
    <string name="lockscreen_apply_success">Lock screen wallpaper applied</string>
    <string name="lockscreen_apply_success_but_home_apply_failured">"Lock screen wallpaper applied. Can't apply Home screen wallpaper."</string>
    <string name="lockscreen_magazine_subscribe">%1$s followers</string>
    <string name="lockscreen_magazine_summary">Categories</string>
    <string name="lockscreen_magazine_system_subscribe">%1$s wallpapers</string>
    <string name="lockscreen_magazine_system_title">Offline</string>
    <string name="lockscreen_magazine_title">Wallpaper Carousel</string>
    <string name="lockscreen_wallpaper">Lock screen</string>
    <string name="lockstyle_personal_settings">Customize</string>
    <string name="mi_wallpaper">MIUI wallpaper</string>
    <string name="multi_sim_ringtone_settings_dialog_message">The ringtone is applied to both SIM cards.</string>
    <string name="multi_sim_ringtone_settings_dialog_ok">Got it</string>
    <string name="multi_sim_ringtone_settings_dialog_remind_never">"Don't show again"</string>
    <string name="multi_sim_ringtone_settings_dialog_title">Compatibility issues</string>
    <string name="my_gifts">Gifts</string>
    <string name="my_gifts_purchased">Purchased</string>
    <string name="my_gifts_received">Received</string>
    <string name="no_data">"Can't connect to the network"</string>
    <string name="provision_loading_tips">Just a sec…</string>
    <string name="provision_second_title">Select one of the several default themes</string>
    <string name="provision_title">Choose a theme</string>
    <string name="resource_comment_all_comments">All</string>
    <string name="resource_comment_bad_comments">Negative</string>
    <string name="resource_comment_edit_text_default">Write a comment</string>
    <string name="resource_comment_good_comments">Positive</string>
    <string name="resource_comment_rating_star_tips">Touch stars to rate:</string>
    <string name="resource_comment_upload_hint">Your comment will be displayed after a brief review.</string>
    <string name="theme_apply_audio_dialog_item_alarm">Alarm</string>
    <string name="theme_apply_audio_dialog_item_color_ring_back_tone">Custom ringback tone</string>
    <string name="theme_apply_audio_dialog_item_notification">Notification</string>
    <string name="theme_apply_audio_dialog_item_ringtone">Ringtone</string>
</resources>