<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/resource_comment_padding_common" android:paddingEnd="@dimen/resource_comment_padding_common"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resource_comment_rating_star_tips" android:layout_marginEnd="@dimen/resource_comment_padding_common" />
        <RatingBar android:layout_gravity="center_vertical" android:id="@id/ratingbar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/resource_comment_padding_common" android:layout_marginBottom="@dimen/resource_comment_padding_common" style="@style/Resource.Widget.RatingBar.Edit" />
    </LinearLayout>
    <EditText android:gravity="start" android:id="@id/edit" android:layout_width="fill_parent" android:layout_height="0.0dip" android:hint="@string/resource_comment_edit_text_default" android:singleLine="false" android:maxLength="800" android:layout_weight="1.0" />
    <TextView android:layout_gravity="center" android:id="@id/upload_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/resource_comment_padding_common_medium" android:layout_marginBottom="@dimen/resource_comment_padding_common" android:text="@string/resource_comment_upload_hint" />
</LinearLayout>