<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/resource_comment" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/resource_list_horizontal_padding" android:paddingEnd="@dimen/resource_list_horizontal_padding">
        <com.android.thememanager.view.ResourceCommentsHeaderView android:id="@id/resource_comment_header" android:paddingTop="15.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/resoruce_comment_list_horizontal_padding" android:paddingEnd="@dimen/resoruce_comment_list_horizontal_padding" />
    </LinearLayout>
    <LinearLayout android:id="@id/resource_comment_switcher" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/Widget.TabBar">
        <Button android:id="@id/all_comments" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/resource_comment_all_comments" android:layout_weight="1.0" style="@style/Widget.TabView" />
        <Button android:id="@id/good_comments" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/resource_comment_good_comments" android:layout_weight="1.0" style="@style/Widget.TabView" />
        <Button android:id="@id/bad_comments" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/resource_comment_bad_comments" android:layout_weight="1.0" style="@style/Widget.TabView" />
    </LinearLayout>
    <FrameLayout android:id="@id/resource_comment_fragment_container" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</LinearLayout>