<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="?android:dividerHorizontal" android:showDividers="middle" android:dividerPadding="0.0dip" android:paddingStart="1.0px" android:paddingEnd="1.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@android:drawable/divider_horizontal_bright" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="vertical" android:id="@id/present_panel" android:paddingTop="@dimen/gift_present_dialog_padding" android:paddingBottom="@dimen/gift_present_dialog_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/gift_present_dialog_padding" android:paddingEnd="@dimen/gift_present_dialog_padding">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageButton android:id="@id/phone_contacts" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_contact_picker" android:layout_centerVertical="true" android:layout_marginStart="@dimen/gift_present_contact_picker_button_gap" android:layout_alignParentEnd="true" />
            <ImageButton android:id="@id/mi_contacts" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_mi_contact_picker" android:layout_centerVertical="true" android:layout_marginStart="@dimen/gift_present_contact_picker_button_gap" android:layout_toStartOf="@id/phone_contacts" />
            <EditText android:id="@id/account_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/gift_present_dlg_input_hint" android:layout_centerVertical="true" android:inputType="phone" android:layout_toStartOf="@id/mi_contacts" />
        </RelativeLayout>
        <TextView android:id="@id/note" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/gift_present_dialog_endnote_margin" android:text="@string/gift_present_dlg_no_fee" android:layout_marginStart="@dimen/gift_present_dialog_endnote_margin" />
        <CheckBox android:id="@id/anonymousCheckbox" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="@dimen/gift_present_dialog_checkbox_margin" android:layout_marginBottom="@dimen/gift_present_dialog_checkbox_margin" android:text="@string/gift_present_dlg_anonymous" style="@style/Widget.CompoundButton.CheckBox" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:measureWithLargestChild="true">
            <Button android:gravity="center" android:id="@id/negativeBtn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@android:string/cancel" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
            <Button android:textStyle="bold" android:gravity="center" android:id="@id/positiveBtn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@android:string/ok" android:layout_weight="1.0" style="?miui:attr/buttonBarDefaultButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <View android:background="@android:drawable/divider_horizontal_bright" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textStyle="bold" android:id="@id/shareBtn" android:background="@android:color/transparent" android:padding="@dimen/gift_share_button_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gift_present_dlg_share" style="?miui:attr/buttonBarDefaultButtonStyle" />
</LinearLayout>