<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/content_root" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/provision_title_margin_top" android:layout_marginStart="@dimen/provision_title_margin_start">
        <TextView android:textSize="@dimen/provision_title_size" android:textStyle="bold" android:textColor="@color/provision_title_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/provision_title" />
        <TextView android:textSize="@dimen/provision_second_title_size" android:textColor="@color/provision_second_title_color" android:paddingTop="@dimen/provision_second_title_margin_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/provision_second_title" />
    </LinearLayout>
    <com.android.thememanager.view.ResourceScreenView android:id="@id/full_screenview" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="vertical" android:id="@id/content" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.android.thememanager.view.ResourceScreenView android:id="@id/screenview" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/provision_screen_view_margin_top" android:layout_weight="1.0" />
        <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/provision_btn_margin_bottom" android:layout_marginStart="@dimen/provision_btn_margin_offset" android:layout_marginEnd="@dimen/provision_btn_margin_offset">
            <ViewStub android:id="@id/back_stub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="true" />
            <ViewStub android:id="@id/continue_stub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/loading_detail" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:id="@id/loading_progress" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@id/loading_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/provision_loading_tips" />
    </LinearLayout>
    <ImageView android:id="@id/coverview" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</FrameLayout>